Fixed front page cards layout on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -11976,13 +11976,14 @@ figcaption {
   left: 0;
   width: 500px;
   height: 350px;
-  padding: 0 !important;
+  padding: 15px;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.2);
   overflow: hidden;
   border: 2px black solid;
   opacity: 1;
   transition: visible 0s linear 0.3s;
   color: white;
+  background-color: white;
 }
 @media (max-width: 768px) {
   .content-card {
@@ -12024,7 +12025,10 @@ figcaption {
   pointer-events: none;
 }
 .content-card figure {
-  position: relative;
+  position: absolute;
+  margin: -15px;
+  top: 15px;
+  left: 15px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -12100,7 +12104,6 @@ figcaption {
   height: 500px;
 }
 .content-card.contact-card p {
-  margin: 30px;
   width: 70%;
 }
 .content-card.contact-card ul {
@@ -12126,8 +12129,13 @@ figcaption {
   width: auto;
   padding-right: 15px;
 }
+@media (max-width: 768px) {
+  .content-card.contact-card {
+    max-width: 100vw;
+    font-size: 2.8rem;
+  }
+}
 .content-card.publications-card {
-  padding: 30px !important;
   background-color: white;
   color: #000;
   height: 70vh;
@@ -12157,6 +12165,11 @@ figcaption {
   font-family: "Favorit", "Helvetica Neue", sans-serif;
   margin-left: 15px;
   transform: scale(1.1) translateY(2px);
+}
+@media (max-width: 768px) {
+  .content-card.publications-card {
+    z-index: 98;
+  }
 }
 
 #main .main-header {
